# Bare-Metal-Embedded-C

./: .gitignore  CMakeLists.txt  README.md  build_and_flash.sh  flash.sh  make.sh
cmake/: arm-none-eabi-gcc.cmake
include/: ICM20948.h  adc.h  filters.h  fpu.h  gp_timer.h  gpio.h  main.h  nvic.h  printing.h  rcc.h  spi.h  timer.h  usart.h
linker/: stm32_ls.ld
scripts/: gdb_auto_script.gdb  stm32f4discovery.cfg  stm32f4x.cfg
src/: ICM20948.c  adc.c  filters.c  fpu.c  gp_timer.c  gpio.c  main.c  printing.c  rcc.c  spi.c  stm32f407_startup.c  timer.c  usart.c
